--- a/WebApplication3/Web.config
+++ b/WebApplication3/Web.config
@@ -115,8 +115,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="AppManagement" connectionString="metadata=res://*/Models.AppDb.csdl|res://*/Models.AppDb.ssdl|res://*/Models.AppDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.100.10.10;initial catalog=RGNOrderManagement_Test;persist security info=True;user id=sa;password=Q1w2e3r4t5!;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="V3" connectionString="metadata=res://*/Models.V3Model.csdl|res://*/Models.V3Model.ssdl|res://*/Models.V3Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.100.10.10;initial catalog=TRADEGRAM_V3;persist security info=True;user id=sa;password=Q1w2e3r4t5!;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="AppManagement" connectionString="metadata=res://*/Models.AppDb.csdl|res://*/Models.AppDb.ssdl|res://*/Models.AppDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.100.10.10;initial catalog=RGNOrderManagement_Test;persist security info=True;user id=sa;password=Q1w2e3r4t5!;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="V3" connectionString="metadata=res://*/Models.V3Model.csdl|res://*/Models.V3Model.ssdl|res://*/Models.V3Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.100.10.10;initial catalog=TRADEGRAM_V3;persist security info=True;user id=sa;password=Q1w2e3r4t5!;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
 	  <!--NEYZEN-->
 	  <!--<add name="V3" connectionString="metadata=res://*/Models.V3Model.csdl|res://*/Models.V3Model.ssdl|res://*/Models.V3Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.200.80.10;initial catalog=V3_NEYZEN;user id=sa;password=1qazxsw2+;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
@@ -148,11 +148,11 @@
 		<add name="AppManagement" connectionString="metadata=res://*/Models.AppDb.csdl|res://*/Models.AppDb.ssdl|res://*/Models.AppDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.250;initial catalog=RGNOrderManagement;persist security info=True;user id=sa;password=Start!2013;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 
 	  <!--ÇAMAŞIR CİTY-->
-	  <add name="V3" connectionString="metadata=res://*/Models.V3Model.csdl|res://*/Models.V3Model.ssdl|res://*/Models.V3Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.12\KOTASQL;initial catalog=V3_KOTA;user id=sa;password=*1Melek_;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <!--<add name="V3" connectionString="metadata=res://*/Models.V3Model.csdl|res://*/Models.V3Model.ssdl|res://*/Models.V3Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.12\KOTASQL;initial catalog=V3_KOTA;user id=sa;password=*1Melek_;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
 		<add name="rgnsrv.TRADEGRAM_V3.dbo" connectionString="XpoProvider=MSSqlServer;data source=192.168.0.12\KOTASQL;user id=sa;password=*1Melek_;initial catalog=V3_KOTA;Persist Security Info=true" />
 
-		<add name="AppManagement" connectionString="metadata=res://*/Models.AppDb.csdl|res://*/Models.AppDb.ssdl|res://*/Models.AppDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.12\KOTASQL;initial catalog=RGNOrderManagement;persist security info=True;user id=sa;password=*1Melek_;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="AppManagement" connectionString="metadata=res://*/Models.AppDb.csdl|res://*/Models.AppDb.ssdl|res://*/Models.AppDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.12\KOTASQL;initial catalog=RGNOrderManagement;persist security info=True;user id=sa;password=*1Melek_;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 
   </connectionStrings>
 	<!--<appSettings>
